--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
 #    active: local
 
 keycloak:
-  auth-server-url: http://13.209.121.101:8080/auth
+  auth-server-url: http://127.0.0.1:8080/auth
   realm: danggn-market
   resource: chatting-server
   public-client: true
@@ -19,6 +19,6 @@ keycloak:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://127.0.0.1:8761/eureka
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
